# cineontool

./: .clang-format  CMakeLists.txt  README.md  cineontool.cpp
scripts/: clang-format.sh
